--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -10,7 +10,8 @@
       "@server/*": ["server/*"],
       "@prisma/client/*": ["@calcom/prisma/client/*"],
       "@calcom/repository/*": ["@calcom/lib/server/repository/*"],
-      "@calcom/ui/*": ["../../packages/ui/components/*"]
+      "@calcom/ui/*": ["../../packages/ui/components/*"],
+      "@calcom/event-types": ["../../packages/@calcom/event-types"]
     },
     "plugins": [
       {
